# binrun

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
include/: resetstring.h
src/: binrun.c  resetstring.c
